# Beinn

./: .gitignore  copier.yml  deno.json  package.json
backend/: index.ts  package.json
example/examplelib/: pyproject.toml
example/examplelib/src/examplelib/: ExampleDriver.py  __init__.py
example/experiment/: .beinn  .gitignore  .qoslabapp_state  ExampleExperiment.py  archived.py  data.db  hello.py  main.py  pyproject.toml
example/experiment/abcde/: abcccddde.py
example/experiment/app/: .gitignore  README.md  main.py
example/experiment/app/lib/: state.py
example/experiment/app/routers/: workspace.py
example/experiment/copier_test/origin/: main.py
example/experiment/data/: ExampleSqlSaver.h5  ExampleSqlSaver.pickle  data.db
example/experiment/lib/: ExampleExperiment.py
example/experiment/ttt/: ttt.py
example/experiment/wow/: main.py
frontend/: package.json  tsconfig.json  vite.config.ts
