[project]
name = "examplelib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "harrylaulau", email = "dev+github@harrylaulau.me" }]
requires-python = ">=3.13"
dependencies = ["cnoc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/examplelib"]

[tool.uv.sources]
cnoc = { git = "https://github.com/qosUoG/Beinn", subdirectory = "packages/cnoc", branch = "main" }

[tool.uv]
link-mode = "copy"
